[tool.poetry]
name = "four-key-metrics"
version = "0.1.0"
description = ""
authors = ["Craig J. Bass <1889973+craigjbass@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ciso8601 = "^2.2.0"
requests = "^2.26.0"
glom = "^20.11.0"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
httpretty = "^1.1.4"
black = {version = "^22.1.0", allow-prereleases = true}
flake8 = "^4.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
max_line_length = 120
#ignore = "E501,W6"  # or ["E501", "W6"]
in-place = true
recursive = true